--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "overtrue/laravel-wechat": "~4.0",
+        "predis/predis": "^1.1",
         "tymon/jwt-auth": "1.0.0-rc.1"
     },
     "require-dev": {
