--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "genealabs/laravel-model-caching": "^0.2.63",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "overtrue/laravel-filesystem-qiniu": "^1.0",
         "overtrue/laravel-wechat": "~4.0",
         "predis/predis": "^1.1",
         "tymon/jwt-auth": "1.0.0-rc.1"
